<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/deluxePizza"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza" />

    <ImageView
        android:id="@+id/hawaiinPizza"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/deluxePizza"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza" />

    <ImageView
        android:id="@+id/pepperoniPizza"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hawaiinPizza"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza" />

    <RadioGroup
        android:id="@+id/pizzaGroup"
        android:layout_width="356dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hawaiinPizza">

        <RadioButton
            android:id="@+id/deluxeButton"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/deluxe_pizza" />

        <RadioButton
            android:id="@+id/hawaiinButton"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/hawaiian_pizza" />

        <RadioButton
            android:id="@+id/pepperoniButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni_pizza"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:text="@string/order_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaGroup" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="114dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/newstoreorders" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="111dp"
        android:layout_height="97dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:srcCompat="@drawable/newcurrentorders" />

    <Button
        android:id="@+id/button4"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="6dp"
        android:text="@string/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="11dp"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>